# customer-issue-resolution-copilot

./: .env.example  .gitignore  Makefile  README.md  Readme.md  app.py  config.toml  pyproject.toml
ci/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
data/mock/bookings/: bookings.json
data/mock/issues/: customer_issues.json
data/mock/policies/: accessibility_policy.md  cancellation_refund_policy.md  complaint_handling_policy.md  late_checkout_policy.md  loyalty_program_policy.md  room_upgrade_policy.md  security_safety_policy.md
data/mock/resolutions/: historical_resolutions.json
data/skills/: amenity_request.yaml  billing_dispute.yaml  cancellation_refund.yaml  late_checkout_request.yaml  registry.yaml  room_upgrade_request.yaml  skill_736daa5b.yaml  skill_9200a40e.yaml  skill_a7bcad64.yaml  skill_fcf0ea7f.yaml
docs/: component-diagram.md  sequence-diagram.md  system-design-document.md
evals/: README.md  __init__.py  gpt54_mini_wrapper.py  knowledge_base_rag_evaluator.py  llm_judge.py  ragas_evaluator.py  run_system_evaluations.py  skill_matching_rag_evaluator.py
evals/reports/: evaluation_report_20260608_202401.md  evaluation_report_20260608_203539.md  evaluation_report_20260608_204057.md  evaluation_report_20260608_233801.md
evals/results/: kb_rag_20260608_202200.json  kb_rag_20260608_203539.json  kb_rag_20260608_204057.json  kb_rag_20260608_233801.json  skill_matching_20260608_203539.json  skill_matching_20260608_233801.json
evals/test_data/: kb_rag_test_cases.json  skill_matching_test_cases.json
scripts/: generate_mock_bookings.py  generate_mock_issues.py  generate_mock_resolutions.py  index_policies.py  reindex_hotel_knowledge.py  reindex_skills.py  reindex_skills_simple.py  remove_emojis_from_code.py  test_rag_pipeline.py
src/: __init__.py
src/application/approval/: approval_service.py
src/application/executor/: executor_agent.py
src/application/guardrails/: __init__.py  approval_enforcer.py  confidence_checker.py  guardrails_ai_injection_detector.py  pii_detector.py  tool_validator.py
src/application/orchestrator/: orchestrator_agent.py
src/application/rag/: bm25_retriever.py  chunking.py  context_assembly.py  document_ingestion.py  rag_pipeline.py  reranking.py  retrieval.py
src/application/react/: README.md  tpao_loop.py
src/application/skills/: __init__.py  skill_compiler.py  skill_matcher.py  skill_registry.py
src/application/tools/: __init__.py  base.py  mock_tools.py
src/domain/: __init__.py
src/domain/exceptions/: __init__.py
src/domain/interfaces/: __init__.py  approval_gateway.py  executor.py  orchestrator.py  rag_retriever.py  skill_matcher.py  tool_executor.py
src/domain/models/: __init__.py  approval.py  booking.py  context.py  issue.py  resolution.py  skill.py
src/infrastructure/embeddings/: __init__.py  embedding_service.py
src/infrastructure/llm/: __init__.py  llm_service.py
src/infrastructure/vector_store/: chromadb_adapter.py
tests/: README.md  guardrails_test_cases.txt  run_all_tests.py  test_agentic_workflow.py  test_chunking.py  test_guardrails.py  test_simple_workflow.py  test_skill_matching.py  test_tpao_rag.py  tpao_rag_test_queries.txt  verify_collections.py
tests/evaluation/: rag_metrics.py
tests/integration/: test_rag_pipeline.py
