[tool.poetry]
name = "customer-issue-resolution-copilot"
version = "0.1.0"
description = "AI-powered customer issue resolution system with agentic workflows"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "evals"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^2.0.0"
chromadb = "^0.5.0"
sentence-transformers = "^3.0.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
streamlit = "^1.28.0"
langgraph = "^1.0.0"
langchain = "^1.3.0"
langchain-openai = "^1.3.0"
# Pin langchain-community to <0.4.2 to fix RAGAS VertexAI import bug
# See: https://github.com/explodinggradients/ragas/issues/2741
langchain-community = "<0.4.2"
ragas = "^0.4.3"
datasets = "^5.0.0"
nest-asyncio = "^1.6.0"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false